--- a/publication/index.html
+++ b/publication/index.html
@@ -2666,12 +2666,10 @@
 
 
   
-    
-  
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://digibug.ugr.es/handle/10481/30859" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/sanchez-monedero-2013-phd-thesis/sanchez-monedero-2013-phd-thesis.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -2689,6 +2687,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/2013-ThesisDefenceJSM.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
 
 
 
