--- a/talk/2015-12-05-ciencia-datos/index.html
+++ b/talk/2015-12-05-ciencia-datos/index.html
@@ -268,7 +268,7 @@
   
   "location": {
     "@type": "Place",
-    "name": "Universidad Loyola Andalucía",
+    "name": "Universidad Loyola Andalucía. Córdoba, Spain.",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "",
@@ -742,7 +742,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Location</div>
-          <div class="col-12 col-md-9">Universidad Loyola Andalucía</div>
+          <div class="col-12 col-md-9">Universidad Loyola Andalucía. Córdoba, Spain.</div>
           
             <div class="col-md-3"></div>
             <div class="col-12 col-md-9"></div>
