--- a/talk/2017-05-11-time-series_ureading/index.html
+++ b/talk/2017-05-11-time-series_ureading/index.html
@@ -268,7 +268,7 @@
   
   "location": {
     "@type": "Place",
-    "name": "University of Reading",
+    "name": "Department of Meteorology. University of Reading, UK",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "",
@@ -789,7 +789,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Location</div>
-          <div class="col-12 col-md-9">University of Reading</div>
+          <div class="col-12 col-md-9">Department of Meteorology. University of Reading, UK</div>
           
             <div class="col-md-3"></div>
             <div class="col-12 col-md-9">Reading, </div>
