--- a/publication/index.html
+++ b/publication/index.html
@@ -988,6 +988,7 @@
   </span>
   (2019).
   <a href="/publication/sanchez-monedero-politics-borders-2019/">The politics of deceptive borders: &#39;biomarkers of deceit&#39; and the case of iBorderCtrl</a>.
+  Information, Communication and Society (Accepted).
   
   <p>
 
