--- a/talk/2012-10-05-wordpress/index.html
+++ b/talk/2012-10-05-wordpress/index.html
@@ -693,10 +693,49 @@
 
 
 
+  
 
 
 
 
+
+
+<div class="btn-links mb-3">
+  
+  
+
+
+
+
+
+
+
+
+  
+
+
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/talk/2012-10-05-wordpress/2012-10-05-Wordpress.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
 
 
 </div>
