--- a/talk/2015-12-05-ciencia-datos/index.html
+++ b/talk/2015-12-05-ciencia-datos/index.html
@@ -695,10 +695,49 @@
 
 
 
+  
 
 
 
 
+
+
+<div class="btn-links mb-3">
+  
+  
+
+
+
+
+
+
+
+
+  
+
+
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/talk/2015-12-05-ciencia-datos/2015-12-05-ciencia-datos.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
 
 
 </div>
