--- a/talk/index.html
+++ b/talk/index.html
@@ -1968,6 +1968,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/talk/2015-12-05-ciencia-datos/2015-12-05-ciencia-datos.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 
@@ -2078,6 +2082,10 @@
   
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/talk/2012-10-05-wordpress/2012-10-05-Wordpress.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
