--- a/talk/2012-04-12-presentacion-ldap/index.html
+++ b/talk/2012-04-12-presentacion-ldap/index.html
@@ -942,8 +942,8 @@
 
       <div class="media-body">
         <h5 class="card-title"><a href="https://javism.github.io">Javier Sánchez-Monedero</a></h5>
-        <h6 class="card-subtitle">Research Associate</h6>
-        <p class="card-text">Javier Sánchez Monedero is a Research Associate at Cardiff's School of Journalism, Media and Culture and the Data Justice Lab.</p>
+        <h6 class="card-subtitle">Distinguished Researcher</h6>
+        <p class="card-text">Javier Sánchez Monedero is a Distinguished Researcher (&ldquo;Beatriz Galindo) at Córdoba's Department of Computer Science and Numerical Analysis.</p>
         <ul class="network-icon" aria-hidden="true">
   
     
