--- a/index.html
+++ b/index.html
@@ -1095,8 +1095,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.nature.com/articles/s41467-020-20817-6.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
