--- a/publication/rodriguez-2021/index.html
+++ b/publication/rodriguez-2021/index.html
@@ -718,8 +718,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="https://www.nature.com/articles/s41467-020-20817-6.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
