--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
     <h1>Biography</h1>
 
     <p>I am a Distinguished Researcher &ldquo;Beatriz Galindo&rdquo; at the 
-<a href="https://www.uco.es/ayrna" target="_blank" rel="noopener">AYRNA research</a> group in the Dept. of Computer Science at the University of Córdoba and a member of the 
+<a href="https://www.uco.es/ayrna" target="_blank" rel="noopener">AYRNA research</a> group in the Dept. of Computer Science at the University of Córdoba and an affiliate researcher of the 
 <a href="https://datajusticelab.org/" target="_blank" rel="noopener">Data Justice Lab</a> (Cardiff). Previously, I joined the University of Cardiff with the European Research Council project 
 <a href="https://datajusticeproject.net/" target="_blank" rel="noopener">DATAJUSTICE</a>, directed by 
 <a href="https://www.cardiff.ac.uk/people/view/182924-dencik-lina" target="_blank" rel="noopener">Lina Dencik</a>. My current research aims to fill the knowledge gap between social and media researchers and technology as well as to perform technological auditing and design proposals in the intersection of intelligent information systems and social justice.</p>
