--- a/publication/campos-ruiz-2011-omg/index.html
+++ b/publication/campos-ruiz-2011-omg/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >Alejandro de~Campos~Ruiz</span>, <span >Gerardo Pardo-Castellote</span>, <span >GianPiero Napoli</span>, <span >Fernando Crespo-Sanchez</span>, <span >J. Sánchez-Monedero</span>
+  <span >alejandro de~campos~ruiz</span>, <span >gerardo pardo-castellote</span>, <span >gianpiero napoli</span>, <span >fernando crespo-sanchez</span>, <span >j. sánchez-monedero</span>
   </div>
   
   
