--- a/publication/cruz-ramirez-2010-ijcnn/index.html
+++ b/publication/cruz-ramirez-2010-ijcnn/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >M. Cruz-Ramírez</span>, <span >C. Hervás-Martínez</span>, <span >J. C. Fernández</span>, <span >J. Sánchez-Monedero</span>
+  <span >m. cruz-ramírez</span>, <span >c. hervás-martínez</span>, <span >j. c. fernández</span>, <span >j. sánchez-monedero</span>
   </div>
   
   
