--- a/publication/cruz-ramirez-2010-isda/index.html
+++ b/publication/cruz-ramirez-2010-isda/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >M. Cruz-Ramírez</span>, <span >J. C. Fernández</span>, <span >J. Sánchez-Monedero</span>, <span >F. Fernández-Navarro</span>, <span >C. Hervás-Martínez</span>, <span >P. A. Gutiérrez</span>, <span >M. T. Lamata</span>
+  <span >m. cruz-ramírez</span>, <span >j. c. fernández</span>, <span >j. sánchez-monedero</span>, <span >f. fernández-navarro</span>, <span >c. hervás-martínez</span>, <span >p. a. gutiérrez</span>, <span >m. t. lamata</span>
   </div>
   
   
