--- a/publication/cruz-ramirez-2011-sde/index.html
+++ b/publication/cruz-ramirez-2011-sde/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >M. Cruz-Ramirez</span>, <span >J. C. Fernandez</span>, <span >F. Fernandez-Navarro</span>, <span >J. Sánchez-Monedero</span>, <span >C. Hervas-Martinez</span>
+  <span >m. cruz-ramirez</span>, <span >j. c. fernandez</span>, <span >f. fernandez-navarro</span>, <span >j. sánchez-monedero</span>, <span >c. hervas-martinez</span>
   </div>
   
   
