--- a/publication/gutierrez-2013-wind/index.html
+++ b/publication/gutierrez-2013-wind/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >P. A. Gutiérrez</span>, <span >S. Salcedo-Sanz</span>, <span >C. Hervás-Martínez</span>, <span >L. Carro-Calvo</span>, <span >	extbfJ. Sánchez-Monedero</span>, <span >L. Prieto</span>
+  <span >p. a. gutiérrez</span>, <span >s. salcedo-sanz</span>, <span >c. hervás-martínez</span>, <span >l. carro-calvo</span>, <span >	extbfj. sánchez-monedero</span>, <span >l. prieto</span>
   </div>
   
   
