--- a/publication/perez-ortiz-2016-ijcnn/index.html
+++ b/publication/perez-ortiz-2016-ijcnn/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >M. Pérez-Ortiz</span>, <span >J. Sánchez-Monedero</span>, <span >A. A. Sáez</span>, <span >P. A. Gutiérrez</span>, <span >C. Hervás-Martínez</span>
+  <span >m. pérez-ortiz</span>, <span >j. sánchez-monedero</span>, <span >a. a. sáez</span>, <span >p. a. gutiérrez</span>, <span >c. hervás-martínez</span>
   </div>
   
   
