--- a/publication/sanchez-2006/index.html
+++ b/publication/sanchez-2006/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >J. Sánchez-Monedero</span>, <span >L. Meléndez Aganzo</span>, <span >S. Ventura Soto</span>
+  <span >j. sánchez-monedero</span>, <span >l. meléndez aganzo</span>, <span >s. ventura soto</span>
   </div>
   
   
