--- a/publication/sanchez-2007/index.html
+++ b/publication/sanchez-2007/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >J. Sánchez-Monedero</span>, <span >J. M. López-Soler</span>, <span >J. Povedano-Molina</span>
+  <span >j. sánchez-monedero</span>, <span >j. m. lópez-soler</span>, <span >j. povedano-molina</span>
   </div>
   
   
