--- a/publication/sanchez-2008/index.html
+++ b/publication/sanchez-2008/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >J. Sánchez-Monedero</span>, <span >J. M. Lopez-Soler</span>, <span >J. Povedano-Molina</span>, <span >J. M. Lopez-Vega</span>
+  <span >j. sánchez-monedero</span>, <span >j. m. lopez-soler</span>, <span >j. povedano-molina</span>, <span >j. m. lopez-vega</span>
   </div>
   
   
