--- a/publication/sanchez-elmcs-2010/index.html
+++ b/publication/sanchez-elmcs-2010/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >J. Sánchez-Monedero</span>, <span >C. Hervás-Martínez</span>, <span >F. J. Martínez-Estudillo</span>, <span >M. Carbonero Ruz</span>, <span >M. C. Ramírez Moreno</span>, <span >M. Cruz-Ramírez</span>
+  <span >j. sánchez-monedero</span>, <span >c. hervás-martínez</span>, <span >f. j. martínez-estudillo</span>, <span >m. carbonero ruz</span>, <span >m. c. ramírez moreno</span>, <span >m. cruz-ramírez</span>
   </div>
   
   
