--- a/publication/cruz-ramirez-2014-neurocomputing/index.html
+++ b/publication/cruz-ramirez-2014-neurocomputing/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >M. Cruz-Ramírez</span>, <span >C. Hervás-Martínez</span>, <span >J. Sánchez-Monedero</span>, <span >P. A. Gutiérrez</span>
+  <span >m. cruz-ramírez</span>, <span >c. hervás-martínez</span>, <span >j. sánchez-monedero</span>, <span >p. a. gutiérrez</span>
   </div>
   
   
