--- a/publication/perez-ortiz-2016/index.html
+++ b/publication/perez-ortiz-2016/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >M. Pérez-Ortiz</span>, <span >A. Durán-Rosal</span>, <span >P. A. Gutiérrez</span>, <span >J. Sánchez-Monedero</span>, <span >A. Nikolaou</span>, <span >F. Fernández-Navarro</span>, <span >C. Hervás-Martínez</span>
+  <span >m. pérez-ortiz</span>, <span >a. durán-rosal</span>, <span >p. a. gutiérrez</span>, <span >j. sánchez-monedero</span>, <span >a. nikolaou</span>, <span >f. fernández-navarro</span>, <span >c. hervás-martínez</span>
   </div>
   
   
