--- a/publication/sanchez-monedero-2011-npl/index.html
+++ b/publication/sanchez-monedero-2011-npl/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >J. Sánchez-Monedero</span>, <span >P. A. Gutiérrez</span>, <span >F. Fernández-Navarro</span>, <span >C. Hervás-Martínez</span>
+  <span >j. sánchez-monedero</span>, <span >p. a. gutiérrez</span>, <span >f. fernández-navarro</span>, <span >c. hervás-martínez</span>
   </div>
   
   
