--- a/publication/sanchez-monedero-2014-asoc/index.html
+++ b/publication/sanchez-monedero-2014-asoc/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >J. Sánchez-Monedero</span>, <span >P. Campoy-Muñoz</span>, <span >P. A. Gutiérrez</span>, <span >C. Hervás-Martínez</span>
+  <span >j. sánchez-monedero</span>, <span >p. campoy-muñoz</span>, <span >p. a. gutiérrez</span>, <span >c. hervás-martínez</span>
   </div>
   
   
