--- a/publication/sanchez-monedero-2014-eaai/index.html
+++ b/publication/sanchez-monedero-2014-eaai/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >J. Sánchez-Monedero</span>, <span >S. Salcedo-Sanz</span>, <span >P. A. Gutiérrez</span>, <span >C. Casanova-Mateo</span>, <span >C. Hervás-Martínez</span>
+  <span >j. sánchez-monedero</span>, <span >s. salcedo-sanz</span>, <span >p. a. gutiérrez</span>, <span >c. casanova-mateo</span>, <span >c. hervás-martínez</span>
   </div>
   
   
