--- a/publication/sanchez-monedero-how-2018/index.html
+++ b/publication/sanchez-monedero-how-2018/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >J. Sánchez-Monedero</span>, <span >L. Dencik</span>
+  <span >j. sánchez-monedero</span>, <span >l. dencik</span>
   </div>
   
   
