--- a/talk/2018-11-18-datajusticeintheworkplace_oxford/index.html
+++ b/talk/2018-11-18-datajusticeintheworkplace_oxford/index.html
@@ -676,7 +676,7 @@
     
 
   
-  <span >Lina Dencik</span>, <span >Javier Sánchez-Monedero</span>
+  <span >lina dencik</span>, <span >javier sánchez-monedero</span>
   </div>
   
   
