--- a/publication/dorado-moreno-2015-caepia/index.html
+++ b/publication/dorado-moreno-2015-caepia/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >Manuel Dorado-Moreno</span>, <span >Pedro Antonio Gutiérrez</span>, <span >Javier 	extbfSánchez-Monedero</span>, <span >César Hervás-Martínez</span>
+  <span >manuel dorado-moreno</span>, <span >pedro antonio gutiérrez</span>, <span >javier 	extbfsánchez-monedero</span>, <span >césar hervás-martínez</span>
   </div>
   
   
