--- a/publication/jansen-2021-siip/index.html
+++ b/publication/jansen-2021-siip/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >F. Jansen</span>, <span >J. Sánchez-Monedero</span>, <span >L. Dencik</span>
+  <span >f. jansen</span>, <span >j. sánchez-monedero</span>, <span >l. dencik</span>
   </div>
   
   
