--- a/publication/lopez-vega-2010/index.html
+++ b/publication/lopez-vega-2010/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >J. M. López-Vega</span>, <span >J. Povedano-Molina</span>, <span >J. Sánchez-Monedero</span>, <span >J. M. López-Soler</span>
+  <span >j. m. lópez-vega</span>, <span >j. povedano-molina</span>, <span >j. sánchez-monedero</span>, <span >j. m. lópez-soler</span>
   </div>
   
   
