--- a/publication/ordinal-review-2012/index.html
+++ b/publication/ordinal-review-2012/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >P. A. Gutiérrez</span>, <span >M. Pérez-Ortiz</span>, <span >F. Fernández-Navarro</span>, <span >J. Sánchez-Monedero</span>, <span >C. Hervás-Martínez</span>
+  <span >p. a. gutiérrez</span>, <span >m. pérez-ortiz</span>, <span >f. fernández-navarro</span>, <span >j. sánchez-monedero</span>, <span >c. hervás-martínez</span>
   </div>
   
   
