--- a/publication/s-adm-gutierrez-2012/index.html
+++ b/publication/s-adm-gutierrez-2012/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >P. A. Gutiérrez</span>, <span >J. Sánchez-Monedero</span>, <span >C. Hervás-Martínez</span>, <span >M. Cruz-Ramírez</span>, <span >J. C. Fernandez-Caballero</span>, <span >F. Fernandez-Navarro</span>
+  <span >p. a. gutiérrez</span>, <span >j. sánchez-monedero</span>, <span >c. hervás-martínez</span>, <span >m. cruz-ramírez</span>, <span >j. c. fernandez-caballero</span>, <span >f. fernandez-navarro</span>
   </div>
   
   
@@ -771,7 +771,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Proceedings on the International Conference on EUropean Transnational Education (ICEUTE'12)</em></div>
+          <div class="col-12 col-md-9"><em>Proceedings on the International Conference on EUropean Transnational Education (ICEUTE&rsquo;12)</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
