--- a/publication/saez-2015-tmi/index.html
+++ b/publication/saez-2015-tmi/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >A. Saez</span>, <span >J. Sánchez-Monedero</span>, <span >P. A. Gutiérrez</span>, <span >C. Hervás-Martínez</span>
+  <span >a. saez</span>, <span >j. sánchez-monedero</span>, <span >p. a. gutiérrez</span>, <span >c. hervás-martínez</span>
   </div>
   
   
