--- a/publication/sanchez-monedero-what-2020/index.html
+++ b/publication/sanchez-monedero-what-2020/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >J. Sánchez-Monedero L. Dencik</span>, <span >L. Edwards</span>
+  <span >j. sánchez-monedero l. dencik</span>, <span >l. edwards</span>
   </div>
   
   
