--- a/publication/torres-jimenez-2015/index.html
+++ b/publication/torres-jimenez-2015/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >Mercedes Torres-Jiménez</span>, <span >Carlos~R. García-Alonso</span>, <span >J. Sánchez-Monedero</span>, <span >Salud Millán-Lara</span>, <span >César Hervás-Martínez</span>
+  <span >mercedes torres-jiménez</span>, <span >carlos~r. garcía-alonso</span>, <span >j. sánchez-monedero</span>, <span >salud millán-lara</span>, <span >césar hervás-martínez</span>
   </div>
   
   
