--- a/publication/valdivia-how-2021/index.html
+++ b/publication/valdivia-how-2021/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >A. Valdivia</span>, <span >J. Sánchez-Monedero</span>, <span >J. Casillas</span>
+  <span >a. valdivia</span>, <span >j. sánchez-monedero</span>, <span >j. casillas</span>
   </div>
   
   
