--- a/publication/dorado-moreno-2015-iwann/index.html
+++ b/publication/dorado-moreno-2015-iwann/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >Manuel Dorado-Moreno</span>, <span >P. A. Gutiérrez</span>, <span >J. Sánchez-Monedero</span>, <span >César Hervás-Martínez</span>
+  <span >manuel dorado-moreno</span>, <span >p. a. gutiérrez</span>, <span >j. sánchez-monedero</span>, <span >césar hervás-martínez</span>
   </div>
   
   
