--- a/publication/sanchez-2011-isda/index.html
+++ b/publication/sanchez-2011-isda/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >J. Sánchez-Monedero</span>, <span >M. Carbonero-Ruz</span>, <span >D. Becerra-Alonso</span>, <span >F. Martínez-Estudillo</span>, <span >P. A. Gutiérrez</span>, <span >C. Hervás-Martínez</span>
+  <span >j. sánchez-monedero</span>, <span >m. carbonero-ruz</span>, <span >d. becerra-alonso</span>, <span >f. martínez-estudillo</span>, <span >p. a. gutiérrez</span>, <span >c. hervás-martínez</span>
   </div>
   
   
