--- a/index.html
+++ b/index.html
@@ -2522,7 +2522,7 @@
       
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-        <span id="person-email">jsanchezm at uco dot es / javism at posteo dot net</span>
+        <span id="person-email">jsanchezm at uco.es / javism at posteo.net</span>
       </li>
       
 
