--- a/publication/cruz-2010-b/index.html
+++ b/publication/cruz-2010-b/index.html
@@ -662,7 +662,7 @@
     
 
   
-  <span >M. Cruz-Ramírez</span>, <span >J. Sánchez-Monedero</span>, <span >F. Fernandez-Navarro</span>, <span >J. C. Fernandez-Caballero</span>, <span >C. Hervás-Martínez</span>
+  <span >m. cruz-ramírez</span>, <span >j. sánchez-monedero</span>, <span >f. fernandez-navarro</span>, <span >j. c. fernandez-caballero</span>, <span >c. hervás-martínez</span>
   </div>
   
   
