--- a/publication/sanchez-monedero-what-2020/index.html
+++ b/publication/sanchez-monedero-what-2020/index.html
@@ -812,6 +812,8 @@
 
 <div class="article-tags">
   
+  <a class="badge badge-light" href="/tag/social-justice/">Social justice</a>
+  
   <a class="badge badge-light" href="/tag/algorithmic-decision-making/">algorithmic decision-making</a>
   
   <a class="badge badge-light" href="/tag/automated-hiring/">automated hiring</a>
@@ -821,8 +823,6 @@
   <a class="badge badge-light" href="/tag/fairness/">fairness</a>
   
   <a class="badge badge-light" href="/tag/gdpr/">GDPR</a>
-  
-  <a class="badge badge-light" href="/tag/social-justice/">social justice</a>
   
   <a class="badge badge-light" href="/tag/socio-technical-systems/">socio-technical systems</a>
   
@@ -961,6 +961,15 @@
 
 
   
+  
+  <div class="article-widget content-widget-hr">
+    <h3>Related</h3>
+    <ul>
+      
+      <li><a href="/publication/dencik_2022_datajustice/">Data Justice</a></li>
+      
+    </ul>
+  </div>
   
 
 
