--- a/press/index.html
+++ b/press/index.html
@@ -657,7 +657,7 @@
       <h2 id="newspaper-articles">Newspaper articles:</h2>
 <ul>
 <li>
-<p>Javier Sánchez, 
+<p>Ávaro Lorite y Javier Sánchez, 
 <a href="https://www.elsaltodiario.com/laboral/inteligencia-artificial-servicio-jefes" target="_blank" rel="noopener">Inteligencia artificial al servicio de tus jefes</a>, <em>El Salto Diario</em>, 21-Sep-2021.</p>
 </li>
 <li>
