--- a/talk/2021-07-07-securityflows/index.html
+++ b/talk/2021-07-07-securityflows/index.html
@@ -282,7 +282,7 @@
   
   "location": {
     "@type": "Place",
-    "name": "King’s College London, Londo, UK.",
+    "name": "King’s College London, London, UK.",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "",
@@ -735,7 +735,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="/talk/2021-07-07-securityflows/2021-03-03-presentation-durham.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="/talk/2021-07-07-securityflows/2021-07-07-SecurityFlows.pdf" target="_blank" rel="noopener">
   Slides
 </a>
 
@@ -804,7 +804,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Location</div>
-          <div class="col-12 col-md-9">King’s College London, Londo, UK.</div>
+          <div class="col-12 col-md-9">King’s College London, London, UK.</div>
           
             <div class="col-md-3"></div>
             <div class="col-12 col-md-9">London/Online, </div>
