--- a/publication/index.html
+++ b/publication/index.html
@@ -1569,7 +1569,7 @@
   </span>
   (2020).
   <a href="/publication/sanchez-monedero-what-2020/">What Does It Mean to “solve” the Problem of Discrimination in Hiring? Social, Technical and Legal Perspectives from the UK on Automated Hiring Systems</a>.
-  <em>Proceedings of the 2020 Conference on Fairness, Accountability, and Transparency</em>.
+  <em>Proceedings of the 2020 Conference on Fairness, Accountability, and Transparency</em>. Best interdisciplinary paper award..
   
   <p>
 
