--- a/publication/sanchez-monedero-what-2020/index.html
+++ b/publication/sanchez-monedero-what-2020/index.html
@@ -791,7 +791,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Proceedings of the 2020 Conference on Fairness, Accountability, and Transparency</em></div>
+          <div class="col-12 col-md-9"><em>Proceedings of the 2020 Conference on Fairness, Accountability, and Transparency</em>. Best interdisciplinary paper award.</div>
         </div>
       </div>
       <div class="col-md-1"></div>
