--- a/press/index.html
+++ b/press/index.html
@@ -656,6 +656,14 @@
 <ul>
 <li>
 <p>
+<a href="https://www.newtral.es/sermas-gpt-ia-madrid-validacion-sesgos-enfermedades-raras/" target="_blank" rel="noopener">Sermas GPT, la IA de la Comunidad de Madrid para enfermedades raras, aún no ha pasado la validación de un comité médico</a>, <em>Newtral</em>, 01-03-2024.</p>
+</li>
+<li>
+<p>
+<a href="https://www.newtral.es/riesgos-detras-de-worldcoin-la-compania-del-creador-de-chatgpt-que-escanea-los-iris-de-las-personas/20240222/" target="_blank" rel="noopener">Riesgos detrás de Worldcoin, la compañía del creador de ChatGPT que escanea los iris de las personas</a>, <em>Newtral</em>, 23-02-2024.</p>
+</li>
+<li>
+<p>
 <a href="https://www.newtral.es/identidad-digital-europea-eidas-voluntario-obligatorio/20240215/" target="_blank" rel="noopener">Qué es la Identidad digital europea: mucho más que una firma electrónica que será «obligatoria de facto» para 440 millones de europeos</a>, <em>Newtral</em>, 15-02-2024.</p>
 </li>
 <li>
@@ -665,6 +673,10 @@
 <li>
 <p>
 <a href="https://www.businessinsider.es/estrategias-ia-espana-no-estan-sirviendo-nada-1314588" target="_blank" rel="noopener">España y la mayoría de comunidades autónomas tienen planes o estrategias IA y sorpresa: no sirven para nada</a>, <em>Business Insider España</em>, 4-oct-2023.</p>
+</li>
+<li>
+<p>
+<a href="https://maldita.es/malditatecnologia/20230609/cartas-abiertas-inteligencia-artificial-analisis-expertos/" target="_blank" rel="noopener">Cartas abiertas a la inteligencia artificial. ¿Tiene sentido “parar” el desarrollo de la IA? ¿Es comparable a una pandemia o una guerra nuclear?</a>, <em>Maldita.es</em>, 9-jun-2023.</p>
 </li>
 <li>
 <p>
