--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
     
     <h1>Biography</h1>
 
-    <p>I am a Distinguished Researcher &ldquo;Beatriz Galindo&rdquo; (&gt;80% teaching) at the 
+    <p>I am a Distinguished Researcher &ldquo;Beatriz Galindo&rdquo; (80% teaching, 10% management, 10% reseach) at the 
 <a href="https://www.uco.es/ayrna" target="_blank" rel="noopener">AYRNA research</a> group in the Dept. of Computer Science at the University of Córdoba and an affiliate researcher of the 
 <a href="https://datajusticelab.org/" target="_blank" rel="noopener">Data Justice Lab</a> (Cardiff). Previously, I joined the University of Cardiff with the European Research Council project 
 <a href="https://datajusticeproject.net/" target="_blank" rel="noopener">DATAJUSTICE</a>, directed by 
