--- a/index.html
+++ b/index.html
@@ -742,8 +742,7 @@
 <p>I hold a PhD. in Computer Science from the University of Granada (PhD Thesis Dissertation is available 
 <a href="publication/sanchez-monedero-2013-phd-thesis/">here</a>) and I have been an Associate Professor at the University of Córdoba and the University Loyola Andalucía and a Research Intern at Real-Time Innovations (US).  I worked on several projects involving distributed systems and machine learning. My past projects were with the AYRNA research group at the University of Córdoba targeting problems of biomedicine, renewable energy and climatology among others. I am the author of 
 <a href="https://scholar.google.com/citations?user=hWWO9LAAAAAJ&amp;hl=es&amp;oi=ao" target="_blank" rel="noopener">journal and conference papers</a> with contributions in evolutionary computation, artificial neural networks, kernel methods and ordinal regression models and recently, in critical digital studies. I am the co-author of free (as in freedom) scientific software 
-<a href="https://github.com/ayrna/orca" target="_blank" rel="noopener">ORCA</a> with Pedro A. Gutiérrez and María Pérez-Ortiz. 
-<a href="https://www.uco.es/~i02samoj/" target="_blank" rel="noopener">Former website</a> at the University of Córdoba.</p>
+<a href="https://github.com/ayrna/orca" target="_blank" rel="noopener">ORCA</a> with Pedro A. Gutiérrez and María Pérez-Ortiz.</p>
 
 
     <div class="row">
